// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Action Creators  Action Creator: fetchArticle success action returns data passed 1`] = `
Object {
  "payload": Array [
    "foo",
    "bar",
    "baz",
  ],
  "type": "FETCH_ARTICLE_SUCCESS",
}
`;

exports[`Test Action Creators  Action Creator: fetchArticles success action returns data passed 1`] = `
Object {
  "payload": Array [
    "foo",
    "bar",
    "baz",
  ],
  "type": "FETCH_ARTICLES_SUCCESS",
}
`;

exports[`Test Action Creators  Action Creator: fetchTopicArticles success action returns data passed 1`] = `
Object {
  "payload": Array [
    "foo",
    "bar",
    "baz",
  ],
  "type": "FETCH_TOPIC_ARTICLES_SUCCESS",
}
`;

exports[`Test Action Creators  Action Creator: fetchTopics success action returns data passed 1`] = `
Object {
  "payload": Array [
    "foo",
    "bar",
    "baz",
  ],
  "type": "FETCH_TOPICS_SUCCESS",
}
`;

exports[`Test Action Creators  Action Creator: fetchUsers success action returns data passed 1`] = `
Object {
  "payload": Array [
    "foo",
    "bar",
    "baz",
  ],
  "type": "FETCH_USERS_SUCCESS",
}
`;
